tests/buffer/errors/to_bytes_wrong_type.dby
import std.buffer as buf

let data = b"\x01\x02\x03"
print(buf.to_bytes(data))
